rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,5 @@
 {
-  "favicon": "https://cdn.jsdelivr.net/gh/aiyou9/navgo@image/nav-1698519071651-微信图片_20230914211222.jpg",
+  "favicon": "https://cdn.jsdelivr.net/gh/aiyou9/navgo@image/nav-1698522766452-go-removebg-preview-transformed.png",
   "homeUrl": "https://nav3.cn",
   "language": "zh-CN",
   "loading": "loading1",
